# ENTER-AI

./: .gitignore  benchmark_crawl.py  benchmark_e2e.py  locustfile.py  pyproject.toml
crawler/crawler/spiders/MiniGigiKorea/: MiniGigiKorea.py
crawler/crawler/spiders/clien/: clien.py
crawler/crawler/spiders/quesarzone/: quesarzone.py
project/: main.py  test_report_context.py  test_topic.py
project/filter_pipeline/: filter_chain.py
project/llm_model/: llama2_answer.py  llama2_pipline.py
project/server/: apps.py
project/server/modules/: chain_pipeline.py  crawl_pipeline.py  report_agent.py  set_template.py  topic_pipeline.py  vectordb_pipeline.py
project/tests/: test_report_agent.py  test_report_context.py  test_topic.py
project/user_data/asdf1234/template/: configs.yaml
project/user_data/pig1234/template/: configs.yaml
project/utils/: configs.yaml  mermaid_utils.py
tests/: benchmark_filter.py
