[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "addict>=2.4.0",
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "locust>=2.43.3",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyrootutils>=1.0.4",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "rootutils>=1.0.7",
    "scrapy>=2.14.1",
    "scrapy-splash>=0.11.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
    "w3lib>=2.4.0",
]
